Change casing on js script import

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notion Widgets</title>
-    <script src="assets/common.js"></script>
+    <script src="Assets/common.js"></script>
 </head>
 <body>
     <!-- Main content goes here -->
