Complete commit graph

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notion Widgets</title>
-    
 </head>
 <body>
     <!-- Main content goes here -->
@@ -12,10 +11,10 @@
         <iframe src="Color Picker/index.html"></iframe>
     </div>
     <div id="commit-graph-wrapper" style="display: none;">
-        <iframe src="Commit Graph/index.html"></iframe>
+        <iframe src="Commit Graph/index.html" style="border:none;"></iframe>
     </div>
     <div id="documentation-bar-wrapper" style="display: none;">
-        <iframe src="Documentation Percentage Bar/index.html"></iframe>
+        <iframe src="Documentation Percentage Bar/index.html" style="display:none;"></iframe>
     </div>
     <div id="issue-progress-wrapper" style="display: none;">
         <iframe src="Issue Progress Wheel/index.html"></iframe>
