--- a/Commit Graph/index.html
+++ b/Commit Graph/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Widget</title>
-
+    <script type="module" src="../Assets/colors.js"></script>
+    <script type="module" src="./graphConstants.js"></script>
 </head>
-<body>
-    <!-- Widget-specific content goes here -->
-    <h1>Commit Graph</h1>
+<body style="background-color: #272727; display: flex; justify-content: center; align-items: center;">
+    <!-- Widget-specific content goes here -->        
+    <canvas id="graph-canvas" width=420 height=850></canvas>
+
+    <script  type="module" src="graphFuncs.js"></script>
 </body>
 </html>
