Try to get google cloud working

--- a/index.html
+++ b/index.html
@@ -7,22 +7,6 @@
 </head>
 <body>
     <!-- Main content goes here -->
-    <div id="color-picker-wrapper" style="display: none;">
-        <iframe src="Color Picker/index.html"></iframe>
-    </div>
-    <div id="commit-graph-wrapper" style="display: none;">
-        <iframe src="Commit Graph/index.html" style="border:none;"></iframe>
-    </div>
-    <div id="documentation-bar-wrapper" style="display: none;">
-        <iframe src="Documentation Percentage Bar/index.html" style="display:none;"></iframe>
-    </div>
-    <div id="issue-progress-wrapper" style="display: none;">
-        <iframe src="Issue Progress Wheel/index.html"></iframe>
-    </div>
-    <div id="default-wrapper" style="display: none;">Improper url parameter, please adjust</div>
-    <div>Hello there</div>
-
-
-    <script src="Assets/common.js"></script>
+    <div> Select the widget you want to use by adding "/widgetName" in front of the url</div>
 </body>
 </html>
