--- a/Commit Graph/index.html
+++ b/Commit Graph/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Widget</title>
-    <script type="module" src="../Assets/colors.js"></script>
     <script type="module" src="./graphConstants.js"></script>
+    <script type="module" src="../Assets/colors.js"></script>
+    <script src="https://storage.googleapis.com/[mrkhandujagoat]/storage/v1/client.js"></script>
 </head>
 <body style="background-color: #272727; display: flex; justify-content: center; align-items: center;">
     <!-- Widget-specific content goes here -->        
-    <canvas id="graph-canvas" width=420 height=850></canvas>
+    <canvas id="graph-canvas" width=400 height=850></canvas>
 
+    <script type="module" src="cloudBucket.js"></script>
     <script  type="module" src="graphFuncs.js"></script>
 </body>
 </html>
