Hopefully finish commit graph widget

--- a/Commit Graph/index.html
+++ b/Commit Graph/index.html
@@ -6,12 +6,12 @@
     <title>Widget</title>
     <script type="module" src="./graphConstants.js"></script>
     <script type="module" src="../Assets/colors.js"></script>
-    <script src="https://storage.googleapis.com/[mrkhandujagoat]/storage/v1/client.js"></script>
 </head>
 <body style="background-color: #272727; display: flex; justify-content: center; align-items: center;">
     <!-- Widget-specific content goes here -->        
     <canvas id="graph-canvas" width=400 height=850></canvas>
 
+    <script type="module" src="fetchJSON.js"></script>
     <script type="module" src="graphFuncs.js"></script>
 </body>
 </html>
